--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@chakra-ui/theme-tools": "^1.2.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/ma-shan-zheng": "^4.5.0",
+    "@fontsource/noto-sans-sc": "^4.5.0",
+    "@fontsource/noto-serif-sc": "^4.5.0",
+    "@fontsource/ubuntu": "^4.5.0",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "next-translate": "^1.0.7",
