--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@chakra-ui/theme-tools": "^1.2.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/crimson-text": "^4.5.0",
     "@fontsource/ma-shan-zheng": "^4.5.0",
+    "@fontsource/montserrat": "^4.5.1",
     "@fontsource/noto-sans-sc": "^4.5.0",
     "@fontsource/noto-serif-sc": "^4.5.0",
     "@fontsource/ubuntu": "^4.5.0",
