--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next": "11.1.2",
     "next-translate": "^1.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
