--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.7",
     "@chakra-ui/theme-tools": "^1.2.0",
+    "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.4.1",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@fontsource/crimson-text": "^4.5.0",
     "@fontsource/ma-shan-zheng": "^4.5.0",
