--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.7",
     "@chakra-ui/theme-tools": "^1.2.0",
+    "@emotion/cache": "^11.4.0",
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.4.1",
     "@emotion/server": "^11.4.0",
@@ -27,7 +28,8 @@
     "next-translate": "^1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "sharp": "^0.29.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
