--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "11.1.2",
     "next-translate": "^1.0.7",
     "react": "17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "sharp": "^0.29.0"
