--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fontsource/noto-sans-sc": "^4.5.0",
     "@fontsource/noto-serif-sc": "^4.5.0",
     "@fontsource/ubuntu": "^4.5.0",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "next-translate": "^1.0.7",
@@ -30,7 +31,8 @@
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "sharp": "^0.29.0"
+    "sharp": "^0.29.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "eslint": "7.32.0",
