--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fontsource/noto-sans-sc": "^4.5.0",
     "@fontsource/noto-serif-sc": "^4.5.0",
     "@fontsource/ubuntu": "^4.5.0",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
