--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
-    "next": "11.1.2",
+    "next": "^11.1.2",
     "next-translate": "^1.0.7",
     "react": "17.0.2",
     "react-awesome-reveal": "^3.8.1",
